--- a/3.html
+++ b/3.html
@@ -6,7 +6,7 @@
 
 <!-- Implementación de la librería -->
 <section class="calendar">
-    <calendar-range>
+    <calendar-range locale="es" format-weekday="short">
         <svg slot="previous" name="chevron-left" label="Previous" height="24px" width="24px"
       xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
       class="size-6">
